# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

workspace(name = "fbgemm")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
    ],
)

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-1.14.0",
    urls = [
        "https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz",
    ],
)

new_local_repository(
    name = "cpuinfo",
    build_file = "third_party/cpuinfo.BUILD",
    path = "third_party/cpuinfo",
)

new_local_repository(
    name = "asmjit",
    build_file = "third_party/asmjit.BUILD",
    path = "third_party/asmjit",
)
