# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

workspace(name = "fbgemm")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-1.14.0",
    urls = [
        "https://github.com/google/googletest/archive/refs/tags/v1.14.0.tar.gz",
    ],
)

# NOTE: Starting with Bazel 7, third-party libraries need to be in external/
# https://github.com/bazelbuild/bazel/issues/19963

new_local_repository(
    name = "cpuinfo",
    build_file = "@//external:cpuinfo.BUILD",
    path = "external/cpuinfo",
)

new_local_repository(
    name = "asmjit",
    build_file = "@//external:asmjit.BUILD",
    path = "external/asmjit",
)
